# pokemon-synthesizer

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
examples/: export.rs  player.rs
src/: channel.rs  command.rs  lib.rs  sound.rs
src/gen1/: channel.rs  command.rs  mod.rs  sound.rs
src/gen2/: channel.rs  command.rs  mod.rs  sound.rs
